# NaSoNav

./: CMakeLists.txt  README.md  graph_paths.py  package.xml  path_irregularity.py
annotations/: output_experiment.csv  output_model.csv
annotations/model/: scene0_0.3_0_agentPositionsFileName.csv  scene0_0.3_0_distance2persons.csv  scene0_0.3_0_metrics.csv  scene0_0.3_0_robotPositionsFileName.csv  scene0_0.4_0_metrics.csv  (+281 more)
launch/: create_simulated_environments.launch  store_metrics_model.launch  test.launch  turtlebot2_mapping_lidar.launch  turtlebot2_navigation_lidar.launch
rviz_cfg/: social_navigation.rviz
scripts/: run_experiment.py  run_simulation.py  sacadrl.py
src/: create_simulated_environmets.cpp  robot_controller.cpp  store_annotations.cpp  store_metrics_model.cpp
worlds/: mapping.world  scene0_0.3_0.world  scene0_0.3_1.world  scene0_0.4_0.world  scene0_0.4_1.world  scene0_0.5_0.world  scene0_0.5_1.world  scene0_0.7_0.world  scene0_0.7_1.world  scene0_1.0_0.world  scene0_1.0_1.world  scene0_1.5_0.world  scene0_1.5_1.world  scene0_2.0_0.world  scene0_2.0_1.world  scene0_3.8_0.world  scene0_3.8_1.world  scene1_0.3_0.world  scene1_0.3_1.world  scene1_0.4_0.world  scene1_0.4_1.world  scene1_0.5_0.world  scene1_0.5_1.world  scene1_0.7_0.world  scene1_0.7_1.world  scene1_1.0_0.world  scene1_1.0_1.world  scene1_1.5_0.world  scene1_1.5_1.world  scene1_2.4_0.world  scene1_2.4_1.world  scene1_4.8_0.world  scene1_4.8_1.world  scene2_0.3_0.world  scene2_0.3_1.world  scene2_0.4_0.world  scene2_0.4_1.world  scene2_0.5_0.world  scene2_0.5_1.world  scene2_0.7_0.world  (+121 more)
(+2968 files in other folders)
